netcfg (1.08) UNRELEASED; urgency=low

  * Joshua Kwan
    - Fix adhoc -> ad-hoc typo in dhcp.c. closes: #282407, #283861
    - Ask for nameserver information if the DHCP server did not provide
      any. closes: #281924
  * Christian Perrier
    - Add a note to translators about the maximum length of
      individual Choices translations for Select templates

 -- Joshua Kwan <joshk@triplehelix.org>  Fri, 24 Dec 2004 00:22:31 -0800

netcfg (1.07) unstable; urgency=high

  * Joshua Kwan
    - Add missing strdup of WEP key, so that it gets into interfaces.
      closes: #275920
    - Also fix some problems setting WEP keys by passing a missing length
      parameter in the data structure. closes: #280185, #270304
      (Note: this seems to fix s:xxxxx passphrase entry.)
    - Rectify some poor wording and missing examples in netcfg/wireless_wep
      template.
  * Updated translations: 
    - Arabic (ar.po) by Ossama M. Khayat
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Welsh (cy.po) by Dafydd Harries
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - Basque (eu.po) by Piarres Beobide Egaña
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team
    - Gallegan (gl.po) by Héctor Fenández López
    - Hebrew (he.po) by Lior Kaplan
    - Croatian (hr.po) by Krunoslav Gernhard
    - Hungarian (hu.po) by VEROK Istvan
    - Indonesian (id.po) by Debian Indonesia Team
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Bøkmal, Norwegian (nb.po) by Bjorn Steensrud
    - Dutch (nl.po) by Bart Cornelis
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll